Corrige alguns erros lint

--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 body {
-	margin: 100px auto;
-	text-align: center;
-	background: rgb(179, 204, 219);
+  margin: 100px auto;
+  text-align: center;
+  background: rgb(179, 204, 219);
 }
 
 #color-palette * {
-	margin: 10px 10px 20px 10px;
+  margin: 10px 10px 20px;
 }
 
 h1 {
-	font-size: 46px;
+  font-size: 46px;
 }
 
 section .color {
@@ -38,7 +38,7 @@ section .orange {
 
 /* Pixel board */
 #pixel-board {
-	margin: 20px auto;
+  margin: 20px auto;
 }
 
 .pixel {
