--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 
 #title {
   text-align: center;
+  margin-top: 3%;
+  margin-bottom: 3%;
 }
 
 #color-palette {
@@ -59,3 +61,13 @@
   margin-bottom: -4px;
 }
 
+button {
+  display: flex;
+  margin-top: 3%;
+  background-color: transparent;
+  padding: 10px 20px;
+}
+
+button:hover {
+  background-color: orange;
+}
