--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap') ;
 
 * {
   margin: 0;
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-image: url(/image1.jpg);
+  background-image: url('/image1.jpg');
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -14,7 +14,7 @@ body {
 h1 {
   font-size: 70px;
   text-align: center;
-  font-family: 'Homemade Apple', cursive;
+  font-family: Homemade Apple, cursive;
   color: rgb(41, 13, 43);
   text-shadow: 5px, 5px, rgb(88, 30, 92);
 }
@@ -42,16 +42,16 @@ h1 {
 
 #clear-board {
   display: block;
-  margin: 0 auto 0 auto;
+  margin: 0 auto;
   border-radius: 30%;
   padding: 20px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 15px;
 }
 
-#generate-board, #board-size {
+#generate-board , #board-size {
   text-align: center;
-  margin: 20px auto 20px auto;
+  margin: 20px auto;
   display: inline-block;
   border-radius: 10%;
   padding: 10px;
@@ -70,6 +70,7 @@ input {
   padding: 25px;
   width: 100%;
 }
+
 #pixel-board {
   text-align: center;
   box-sizing: border-box;
@@ -85,5 +86,4 @@ input {
   display: inline-block;
   height: 40px;
   width: 40px;
-
 }
