--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   border: 3px solid goldenrod;
-  height: 300px;
+  height: 350px;
   width: 80%;
   padding: 30px;
 }
@@ -72,4 +72,20 @@ h1 {
 
 .blue {
   background-color: blue;
+}
+
+#clear-board {
+  background-color: rgb(42, 40, 40);
+  color: rgb(158, 125, 40);
+  font-family: monospace;
+  margin-bottom: 20px;
+  border: 2px solid rgb(158, 125, 40);
+  border-radius: 5px;
+  padding: 8px;
+}
+
+#clear-board:hover {
+  color: rgb(255, 183, 0);
+  border-color: rgb(255, 183, 0);
+  font-weight: bold;
 }
