--- a/style.css
+++ b/style.css
@@ -1,14 +1,9 @@
-* {
-  border: 0;
-  padding: 0;
-  margin: 0;
-}
-
 body {
   display: block;
   font-family: Arial, sans-serif;
   text-align: center;
   background-color: whitesmoke;
+  margin: 0;
 }
 
 main {
@@ -28,16 +23,6 @@ header {
   padding: 1vmax;
 }
 
-.color1 {
-  width: 40px;
-  height: 40px;
-  border: solid 1px black;
-  display: inline-block;
-  border-radius: 10%;
-  margin: 5px;
-  background-color: black;
-}
-
 .color {
   width: 40px;
   height: 40px;
@@ -53,35 +38,16 @@ header {
   display: inline;
 }
 
-#cor1 {
-  background-color: black;
-}
-
-#cor2 {
-  background-color: Tomato;
-}
-
-#cor3 {
-  background-color: Khaki;
-}
-
-#cor4 {
-  background-color: PowderBlue;
-}
-
-ul {
-  display: inline;
-  margin: 0;
-  padding: 0;
-  border: 0;
-}
-
 .pixel {
-  width: 38px;
-  height: 38px;
+  width: 40px;
+  height: 40px;
   border-radius: 10%;
   background-color: white;
-  border: solid 1px rgba(109, 189, 162, 0.808);
+  border: 1px solid black;
   display: inline-block;
-  margin: 1px 3px;
+}
+
+.ul-pixel-line {
+  text-decoration: none;
+  list-style: none;
 }
