--- a/style.css
+++ b/style.css
@@ -7,20 +7,27 @@ body {
 }
 
 main {
-  background-color: teal;
-  display: contents;
-  text-align: center;
-  margin-bottom: 20px;
-  padding-bottom: 10px;
-}
-
-#title {
-  padding: 1vmax;
+  height: 70%;
+  width: 100%;
+  padding: 1%;
 }
 
 header {
-  margin-bottom: 20px;
-  padding: 1vmax;
+  padding: 2vmax;
+  text-align: center;
+  background-color: cadetblue;
+}
+
+#color-pallete {
+  margin: 10px;
+  border: 5px;
+  display: inline;
+}
+
+#pixel-board {
+  display: block;
+  text-align: center;
+  padding: 5%;
 }
 
 .color {
@@ -30,12 +37,6 @@ header {
   display: inline-block;
   border-radius: 10%;
   margin: 5px;
-}
-
-#color-pallete {
-  margin: 10px;
-  border: 5px;
-  display: inline;
 }
 
 .pixel {
