--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
   margin: 0%;
 }
 
+body{
+  background-image: url("5185.jpg");
+  background-size: cover;
+}
+
 #clear-board{
   margin-top: 10px;
 }
@@ -18,28 +23,13 @@ ul{
 h1{
   margin-left: 45%;
   margin-top: 20px;
+  color: white;
 }
 .squareSize{
   border: solid black 1px;
   width: 80px;
   height: 80px;
   display: inline-block;;
-}
-
-#palettOne{
-  background-color: black;
-}
-
-#palettTwo{
-  background-color: green;
-}
-
-#palettThree{
-  background-color: red;
-}
-
-#palettFour{
- background-color: yellow; 
 }
 
  .pixel{
