--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-#color-palette {
-  display: inline-block;
-}
 .color {
   border: 1px solid black;
   height: 40px;
@@ -10,6 +7,7 @@
 
 #clear-board {
   display: inline-block;
+  margin-bottom: 20px;
 }
 
 .pixel {
@@ -19,7 +17,6 @@
   width: 40px;
   background-color: white;
 }
-
 
 #pixel-board {
   display: inline-block;
