--- a/style.css
+++ b/style.css
@@ -1,8 +1,70 @@
+body {
+  background-color: rgb(40, 42, 54);
+}
+
+main {
+  background-color: rgb(68, 71, 90);
+  margin: auto;
+  margin-top: 20px;
+  min-height: 500px;
+  outline: ridge 5px rgb(68, 71, 90);
+  padding: 32px;
+  width: 85%;
+}
+
+img {
+  display: block;
+}
+
+label {
+  color: rgb(241, 250, 140);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 20px;
+}
+
+button {
+  background-color: rgb(248, 248, 242);
+  border-color: rgb(98, 114, 164);
+  border-radius: 40% 0;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+}
+
+#clear-board {
+  margin-right: 5px;
+}
+
+#title {
+  color: rgb(189, 147, 249);
+  font-family: Acme, sans-serif;
+  font-size: 50px;
+}
+
+#menu {
+  padding: 10px;
+}
+
+#board-size {
+  font-size: 20px;
+  width: 50px;
+}
+
+.centered {
+  margin: auto;
+  width: fit-content;
+}
+
 .color {
   border: 1px solid black;
   display: inline-block;
-  width: 75px;
   height: 75px;
+  width: 75px;
+}
+
+.selected {
+  outline: 2px outset rgb(80, 250, 123);
+  outline-offset: 1px;
 }
 
 .color:nth-of-type( 1 ) {
@@ -10,20 +72,21 @@
 }
 
 /* .color:nth-of-type( 2 ) {
-  background-color: rgb(42, 157, 143);
+  background-color: rgb(139,195,74);
 }
 
 .color:nth-of-type( 3 ) {
-  background-color: rgb(233, 196, 106);
+  background-color: rgb(255,235,58);
 }
 
 .color:nth-of-type( 4 ) {
-  background-color: rgb(231, 111, 81);
+  background-color: rgb(240,203,139);
 } */
 
 .pixel {
   background-color: white;
   border: 1px solid black;
+  cursor: url('/cursor.cur'), auto;
   display: inline-block;
   height: 40px;
   width: 40px;
