--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 body {
-    background-color: white ;
+    background-color:blanchedalmond ;
+    background-image:url(/assets/58930.jpg)
   }
-
 #title {
-      text-align: center;
-      font-size: 80px;
+    color:indigo;
+    font-style: bold;
+    text-align: center;
+    font-size: 80px;
+    margin-bottom: 100px;
   }
 
 #color-palette {
@@ -22,7 +25,6 @@ body {
     width: 70px;
     margin-left: auto;
     margin-right: auto;
-
 }
 
 .pixel {
@@ -39,15 +41,23 @@ body {
     width: 70px;
     height: 70px;
     display: inline-block ;
-    margin: solid black 1px;
+    margin-right: 10px;
+
 }
-.color.black {background-color: black;}
+.color.black {background-color: black; margin-right: 2px;}
 .color.red {background-color: red;}
-.color.orange {background-color: orange}
+.color.orange {background-color: orange;}
 .color.blue {background-color: blue;}
 
 #clear-board {
     width: 120px;
     margin: 30px;
     margin-left:42%;
+}
+#src-background {
+    color:darkgrey;
+    font-size: 15px;
+    position: absolute;
+    bottom: 10px;
+    left: 1400px;
 }
