--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1 {
-  font-family: Gill Sans, Gill Sans MT, Calibri, Trebuchet MS, sans-serif;
+  font-family: sans-serif;
   text-align: center;
   width: auto;
 }
@@ -15,43 +15,43 @@ h1 {
 }
 
 .black {
-  background-color: black;
+background-color: black;
 }
 
 .black:hover {
-  background-color: rgb(41, 37, 37);
+background-color: rgb(41, 37, 37);
 }
 
-.red {
-  background-color: red;
+/* .red {
+background-color: red;
 }
 
 .red:hover {
-  background-color: rgb(199, 33, 33);
+background-color: rgb(199, 33, 33);
 }
 
 .blue {
-  background-color: blue;
+background-color: blue;
 }
 
 .blue:hover {
-  background-color: rgb(17, 17, 195);
+background-color: rgb(17, 17, 195);
 }
 
 .green {
-  background-color: green;
+background-color: green;
 }
 
 .green:hover {
-  background-color: rgb(17, 172, 17);
-}
+background-color: rgb(17, 172, 17);
+} */
 
 #clear-board {
   background-color: grey;
   border: 1px solid black;
   color: white;
   display: inline-block;
-  font-family: Gill Sans, Gill Sans MT, Calibri, Trebuchet MS, sans-serif;
+  font-family: sans-serif;
   font-weight: 800;
   margin: 10px 15px;
   padding: 10px 20px;
@@ -68,7 +68,7 @@ h1 {
   border: 1px solid black;
   color: black;
   display: inline-block;
-  font-family: Gill Sans, Gill Sans MT, Calibri, Trebuchet MS, sans-serif;
+  font-family: sans-serif;
   font-size: 17px;
   font-weight: 800;
   margin: 10px 15px;
@@ -79,7 +79,7 @@ h1 {
 
 #text-new-board {
   display: inline-block;
-  font-family: Gill Sans, Gill Sans MT, Calibri, Trebuchet MS, sans-serif;
+  font-family: sans-serif;
   font-size: 17px;
 }
 
@@ -88,7 +88,7 @@ h1 {
   border: 1px solid black;
   color: white;
   display: inline-block;
-  font-family: Gill Sans, Gill Sans MT, Calibri, Trebuchet MS, sans-serif;
+  font-family: sans-serif;
   font-weight: 800;
   margin: 10px 15px;
   padding: 10px 20px;
