Ajuste fino do fino

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ main {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  min-height: 92vh
+  min-height: 92vh;
 }
 
 header {
@@ -70,7 +70,7 @@ header {
   flex-direction: column;
   width: max-content;
   margin: auto;
-  padding-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 input {
@@ -117,7 +117,7 @@ footer {
 footer p {
   padding: 20px;
   text-align: center;
-  font-weight: bolder;
+  font-weight: 600;
   font-size: 20px;
   font-family: Minecraft, sans-serif;
 }
