--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h1 {
 }
 
 .pixel {
-  background-color:white;
+  background-color: white;
   display: inline-block;
   width: 40px;
   height: 40px;
@@ -50,7 +50,33 @@ h1 {
   text-align: center;
 }
 
-#clear-board {
-  text-align: center;
+#board-size {
   display: inline-block;
+  margin-top: 10px;
+  margin-left: 39%;
+  padding: 5px;
+  text-align: center;
+}
+  
+#generate-board, board-size {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 5px;
+  text-align: center;
+}
+
+#clear-board {
+  display: inline-block;
+  margin-top: 10px;
+  margin-left: 39%;
+  padding: 5px;
+  text-align: center;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  padding: 25px;
+  width: 100%;
 }
