--- a/style.css
+++ b/style.css
@@ -5,14 +5,16 @@ body {
 } 
 
 #header {
-padding: 20px;
-background-color: rgb(172, 165, 165);
+  padding: 20px;
+  background-color: rgb(172, 165, 165);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-size: 1.5em;
 }
 
-
-#clear-board, #generate-board {
+#clear-board , #generate-board {
   padding: 10px;
-  margin: 10px 20px;
   background-color: rgb(172, 165, 165);
   width: 100px;
   cursor: pointer;
@@ -21,7 +23,7 @@ background-color: rgb(172, 165, 165);
 
 #board-size {
   padding: 10px;
-  margin: 10px 0px;
+  margin: 10px;
   cursor: pointer;
   display: inline-block;
 }
@@ -45,7 +47,6 @@ background-color: rgb(172, 165, 165);
   display: inline-block;
   cursor: pointer;
 }
-
 
 .pixel {
   width: 40px;
