--- a/style.css
+++ b/style.css
@@ -57,8 +57,8 @@ h1 {
   padding: 5px;
   text-align: center;
 }
-  
-#generate-board, board-size {
+
+#generate-board {
   display: inline-block;
   margin-top: 10px;
   padding: 5px;
