resolve até o ex 6

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
   display: inline-block;
   width: 100px;
   height: 100px;
-  padding: 5px;
   border: 1px solid black;
   background-color: black;
 }
@@ -11,7 +10,6 @@
   display: inline-block;
   width: 100px;
   height: 100px;
-  padding: 5px;
   border: 1px solid black;
   background-color: red;
 }
@@ -20,7 +18,6 @@
   display: inline-block;
   width: 100px;
   height: 100px;
-  padding: 5px;
   border: 1px solid black;
   background-color: blue;
 }
@@ -29,7 +26,6 @@
   display: inline-block;
   width: 100px;
   height: 100px;
-  padding: 5px;
   border: 1px solid black;
   background-color: green;
 }
@@ -37,19 +33,17 @@
 #pixel-board {
   margin-bottom: 15px;
   margin-top: 15px;
-  width: 206px;
-  height: 206px;
 }
 
 .pixel {
   display: inline-block;
   width: 40px;
   height: 40px;
-  padding: 0;
   margin-right: -5px;
-  margin-bottom: -5px;
-  margin-top: -5px;
-  position: relative;
   border: 1px solid black;
   background-color: white;
+}
+
+.pixels-line {
+  margin-bottom: -5px;
 }
