--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 
 .color {
   display: inline-block;
-  width: 100px;
+  width: 80px;
+  height: 80px;
   border: 1px solid black;
   margin-right: 10px;
 }
@@ -22,4 +23,5 @@
   width: 40px;
   height: 40px;
 }
+
 
