--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
 }
 
 #pixel-board {
-  margin-top: 50px;
+  margin-top: 25px;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -60,7 +60,24 @@ body {
 
 #clear-board {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 50px;
+  margin: 15px auto 5px auto;
+}
+
+#buttons {
+  height: 65px;
+  width: 250px;
+  margin: 30px auto 30px auto;
+}
+
+#board-size {
+  width: 50px;
+  display: inline-block;
+  height: 25px;
+  margin: 0px 10px 0 60px;
+}
+
+#generate-board {
+  display: inline-block;
+  height: 30px;
+  margin: 0 0 0 0;
 }
