--- a/style.css
+++ b/style.css
@@ -13,6 +13,17 @@
     height: 55px;
 }
 
+.pixel {
+    border: solid 1px black;
+    text-align: center;
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    margin-right: -1px;
+    margin-bottom: -5px;
+    background-color: white;
+}
+
 .black {
     background-color: black;
 }
