--- a/style.css
+++ b/style.css
@@ -1,8 +1,24 @@
+/* Título */
+header {
+    text-align: center;
+  }
+  
+#title {
+  text-decoration: underline;
+  font-weight: 900;
+  background-color: yellow;
+  padding: 5px;
+}
+
 /* Paleta de Core */
+#color-palette {
+  margin-bottom: 25px;
+}
+
 .color {
   border: 1px solid black;
-  width: 50px;
-  height: 50px;
+  width: 58px;
+  height: 58px;
   display: inline-block;
 }
 
@@ -23,10 +39,36 @@
 }
 
 /* Quadro de Pixels */
+main {
+  text-align: center;
+}
+
 .pixel {
   width: 40px;
   height: 40px;
   display: inline-block;
   background-color: white;
   border: 1px solid black;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+#first-line {
+  margin-top: 3px;
+}
+
+#second-line {
+  margin-top: 3px;
+}
+
+#third-line {
+ margin-top: 3px;
+}
+
+#fourth-line {
+  margin-top: 3px;
+}
+
+#fifth-line {
+  margin-top: 3px;
 }
