--- a/style.css
+++ b/style.css
@@ -20,17 +20,7 @@ body {
     background-color: rgb(66, 66, 66);
 }
 
-#red {
-    background-color: rgb(255, 0, 43);
-}
-#orange {
-    background-color: rgb(255, 102, 0);
-}
-#yellow {
-    background-color: rgb(255, 196, 0);
-}
-
-#black {
+#color1 {
     background-color: black;
 }
 
@@ -75,7 +65,7 @@ body {
 }
 
 .selected {
-    box-shadow: 0px 0px 30px greenyellow;
+    box-shadow: 0px 0px 30px whitesmoke;
 }
 
 button {
