--- a/style.css
+++ b/style.css
@@ -1,54 +1,54 @@
 .header {
-font-family: 'Nunito', sans-serif;
-font-size: 30px;
-text-align: center;
+  font-family: Nunito, sans-serif;
+  font-size: 30px;
+  text-align: center;
 }
 
 #color-palette {
-    width: 100%;
-    text-align: center;
+  width: 100%;
+  text-align: center;
 }
 
 .color {
-    border: 1px solid black;
-    display: inline-block;
-    padding: 20px;
+  border: 1px solid black;
+  display: inline-block;
+  padding: 20px;
 }
 
-#color1 {
-    background-color: black;
+#black {
+  background-color: black;
 }
 
-#color2 {
-    background-color: red;
+#red {
+  background-color: red;
 }
 
-#color3 {
-    background-color: yellow;
+#yellow {
+  background-color: yellow;
 }
 
-#color4 {
-    background-color: blue;
+#blue {
+  background-color: blue;
 }
 
 main {
-    width: 100%;
-    text-align: center;
+  margin-top: 30px;
+  width: 100%;
+  text-align: center;
 }
 
 #pixel-board {
-    display: inline-block;
-    border: 1px solid black;
-    width: 240px;
-    height: 240px;
+  display: inline-block;
+  border: 1px solid black;
+  width: 232px;
+  height: 238px;
 }
 
 .pixel {
-    margin-top: 2.2px;
-    background-color: white;
-    border: 1px solid black;
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    
+  margin-top: 2px;
+  background-color: white;
+  border: 1px solid black;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
 }
