--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
-.color{
-    background-color: blue;
+.color {
+  border: 1px solid black;
+  width: 65px;
+  height: 65px;
+  display: inline-block;
+}
+
+#black {
+  background-color: black;
+}
+
+#red {
+  background-color: red;
+}
+
+#blue {
+  background-color: blue;
+}
+
+#purple {
+  background-color: purple;
 }
