--- a/style.css
+++ b/style.css
@@ -24,18 +24,18 @@
     background-color: white;
 }
 
-.black {
+#black {
     background-color: black;
 }
 
-.green {
+#green {
     background-color: green;
 }
 
-.red {
+#red {
     background-color: red;
 }
 
-.blue {
+#blue {
     background-color: blue;
 }
