--- a/style.css
+++ b/style.css
@@ -1,76 +1,94 @@
-* { padding: 0; margin: 0; border: 0; box-sizing: border-box; }
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  box-sizing: border-box;
+}
 
-body { background-color: rgb(45, 192, 70); }
+body {
+  background-color: rgb(45, 192, 70);
+}
 
-.clear { clear: both; }
-.center { margin: 0 auto; }
-.block { display: block; }
+.clear {
+  clear: both;
+}
+
+.center {
+  margin: 0 auto;
+}
+
+.block {
+  display: block;
+}
 
 /* Header */
 header h1 {
-    margin: 15pt;
-    text-align: center;
+  margin: 15pt;
+  text-align: center;
 
-    color: white;
-    font-size: 40pt;
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: 600;
-    text-transform: uppercase;
+  color: white;
+  font-size: 40pt;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 /* Pixels Palette */
 .color {
-    margin: 2px;
-    display: inline-block;
+  margin: 2px;
+  display: inline-block;
 
-    width: 33px;
-    height: 33px;
-   
-    border: 1px solid black;
-    cursor: pointer;
+  width: 33px;
+  height: 33px;
+  
+  border: 1px solid black;
+  cursor: pointer;
 }
 .color:hover {
-    border: solid white 2px;
-    transition: opacity 1s;
+  border: solid white 2px;
+  transition: opacity 1s;
 }
 
 #color-palette form {
-    margin: 0 auto;
+  margin: 0 auto;
 
-    width: 30vh;
-    
-    color: white;
-    text-align: center;
-    text-transform: uppercase;
+  width: 30vh;
+  
+  color: white;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 #color-palette form input {
-    background-color: rgb(000, 000, 000, 0); /* Remove background-color Input */
+  background-color: rgb(000, 000, 000, 0); /* Remove background-color Input */
 
-    width: 100%;
-    height: 100px;
-    border: 0;
-    cursor: pointer;
-    outline: none;
+  width: 100%;
+  height: 100px;
+  border: 0;
+  cursor: pointer;
+  outline: none;
 }
 
 #color-palette form input:before {
-    background: url(/images/color-circle.png);
-    width: 20px;
-    height: 20px;
-
+  background: url(/images/color-circle.png);
+  width: 20px;
+  height: 20px;
 }
 
 .pixel-board {
-    background: yellowgreen;
-    margin: 0 auto;
+  background: yellowgreen;
+  margin: 0 auto;
 
-    width: 400px;
-    height: 400px;
+  width: 400px;
+  height: 400px;
 
-    display: grid;
-    justify-content: center;
+  display: grid;
+  justify-content: center;
 }
 
-.pixel-board .pixel { border: black solid 1px; }
+.pixel-board .pixel {
+  border: black solid 1px;
+}
 
-.selected { border: white solid 2px; }
+.selected {
+  border: white solid 2px;
+}
