Little corrections and finalized all minimum requirements

--- a/style.css
+++ b/style.css
@@ -25,34 +25,25 @@ body {
 header h1 {
   margin: 15pt;
   text-align: center;
-
   color: white;
   font-size: 40pt;
-  font-family: 'Times New Roman', Times, serif;
   font-weight: 600;
   text-transform: uppercase;
 }
+
 /* Pixels Palette */
 .color {
   margin: 2px;
   display: inline-block;
-
   width: 33px;
   height: 33px;
-  
   border: 1px solid black;
   cursor: pointer;
-}
-.color:hover {
-  border: solid white 2px;
-  transition: opacity 1s;
 }
 
 #color-palette form {
   margin: 0 auto;
-
   width: 30vh;
-  
   color: white;
   text-align: center;
   text-transform: uppercase;
@@ -60,7 +51,6 @@ header h1 {
 
 #color-palette form input {
   background-color: rgb(000, 000, 000, 0); /* Remove background-color Input */
-
   width: 100%;
   height: 100px;
   border: 0;
@@ -69,7 +59,7 @@ header h1 {
 }
 
 #color-palette form input:before {
-  background: url(/images/color-circle.png);
+  background: url('/images/color-circle.png');
   width: 20px;
   height: 20px;
 }
@@ -77,15 +67,15 @@ header h1 {
 .pixel-board {
   background: yellowgreen;
   margin: 0 auto;
-
   width: 400px;
   height: 400px;
-
   display: grid;
   justify-content: center;
 }
 
-.pixel-board .pixel {
+.pixel {
+  width: 40px;
+  height: 40px;
   border: black solid 1px;
 }
 
